<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <RadioGroup
        android:id="@+id/type_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp">

        <RadioButton
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_types" />

        <RadioButton
            android:id="@+id/education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education" />

        <RadioButton
            android:id="@+id/recreational"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recreational" />

        <RadioButton
            android:id="@+id/social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social" />

        <RadioButton
            android:id="@+id/diy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diy" />

        <RadioButton
            android:id="@+id/charity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charity" />

        <RadioButton
            android:id="@+id/cooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cooking" />

        <RadioButton
            android:id="@+id/relaxation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relaxation" />

        <RadioButton
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music" />

        <RadioButton
            android:id="@+id/busywork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busywork" />
    </RadioGroup>


</LinearLayout>