<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layout_margin="8dp"
    android:elevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/activity_image"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/action_activity"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/some_action"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_image" />

        <TextView
            android:id="@+id/price_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_activity" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/n_a"
            app:layout_constraintBottom_toBottomOf="@id/price_str"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/type_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/type_Cap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_str" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/n_a"
            app:layout_constraintBottom_toBottomOf="@id/type_str"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/accesibility_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/accesibility_level"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_str" />

        <TextView
            android:id="@+id/accesibility_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/n_a"
            app:layout_constraintBottom_toBottomOf="@id/accesibility_str"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/participants_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/participants"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accesibility_str" />

        <TextView
            android:id="@+id/participants_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/smile"
            app:layout_constraintBottom_toBottomOf="@id/participants_str"
            app:layout_constraintEnd_toEndOf="parent" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                style="@style/title_filters"
                android:text="@string/link"/>

            <TextView
                android:id="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vert"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                style="@style/title_filters"
                android:text="@string/share"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>