<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/filter_the_activities"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price_range_str"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/price_range"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/price_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_range_str" />

        <TextView
            android:id="@+id/type_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title"
            app:layout_constraintTop_toBottomOf="@id/price_range"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/type"
            android:padding="8dp"
            />


        <TextView
            android:id="@+id/type_value"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="typeVal"
            app:layout_constraintTop_toTopOf="@id/type_str"
            app:layout_constraintBottom_toBottomOf="@id/type_str"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/accessibility_range_str"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/accessibility"
            app:layout_constraintTop_toBottomOf="@id/type_str"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/accesibility_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toBottomOf="@id/accessibility_range_str"/>

        <Button
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/apply"
            app:layout_constraintTop_toBottomOf="@id/accesibility_range"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="@id/apply_button"
            app:layout_constraintEnd_toStartOf="@id/apply_button"
            app:layout_constraintTop_toTopOf="@id/apply_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>