<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.DetailFragment">
    
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Activities"
        android:elevation="4dp"
        android:layout_alignParentTop="true"/>

<!--#000503-->
<!--#7d968c-->
<!--#7295aa-->

    <RelativeLayout
        android:id="@+id/layout_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/filter_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/filter_price_min_str"
                    style="@style/title_filters"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minimal_price"/>

                <TextView
                    android:id="@+id/filter_price_min_value"
                    style="@style/minPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/n_a"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/filter_price_max_str"
                    style="@style/title_filters"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maximal_price"/>

                <TextView
                    android:id="@+id/filter_price_max_value"
                    style="@style/maxPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/n_a"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/filter_activity_type_str"
                    style="@style/title_filters"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/and_activity_type"/>

                <TextView
                    android:id="@+id/filter_activity_type_value"
                    style="@style/Type"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/n_a"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_below="@id/layout_filter">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/an_error_occurred_while_loading_actions"
                style="@style/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <com.lorentzos.flingswipe.SwipeFlingAdapterView
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/layout_filter"
            app:rotation_degrees="16"/>


</RelativeLayout>